# github-repo-predictor

./: .gitignore  app.py  collect_data.py  main.py  pyproject.toml  requirements.txt  train_and_evaluate.py
test/: train.py
