[project]
name = "github-repo-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.8",
    "numpy>=2.4.4",
    "pandas>=2.0",
    "requests>=2.31",
    "scikit-learn>=1.4",
    "seaborn>=0.13",
    "streamlit>=1.35",
]
